# bidrunner-app

./: .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt  setup-backup  setup.py  styles.tcss
bidrunner2/: main.py
bidrunner2/resources/: ecs-def.json  manual.md  styles.tcss
src/bidrunner2/: main.py
src/bidrunner2/resources/: manual.md  styles.tcss
